Move games on list